fix: no rounded border on ios

--- a/frontend/whiteboard/src/components/container/style.css
+++ b/frontend/whiteboard/src/components/container/style.css
@@ -29,12 +29,11 @@
 .tools-container {
   display: flex;
   left: 20px;
-  top: 50%;
+  vertical-align: middle;
   padding: 10px 10px 10px 10px;
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
-  transform: translate(0, -50%);
   position: absolute;
   flex-direction: column;
   row-gap: 1em;
